[build-system]
requires = ["setuptools >= 46.3.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pmidcite"
description="Turbocharge a PubMed literature search using citation data from the NIH"
version = "0.0.50"
license = "AGPL-3.0-or-later"
authors = [
  {name = 'DV Klopfenstein, PhD', email = 'dvklopfenstein@protonmail.com'},
]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
  "requests",
]

# https://pypi.org/classifiers
classifiers=[
  'Development Status :: 5 - Production/Stable',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
  'Programming Language :: Python',
  'Environment :: Console',
  'Programming Language :: Python :: 3',
  'Operating System :: POSIX :: Linux',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
]

# Needed for assignment expressions & the walrus operator
requires-python = '>=3.8'

[project.urls]
Homepage = "https://github.com/dvklopfenstein/pmidcite"

[project.scripts]
icite   = "pmidcite.scripts.icite:main"
sumpaps = "pmidcite.scripts.summarize_papers:main"

[tool.setuptools]
packages = [
  'pmidcite',
  'pmidcite.cli',
  'pmidcite.eutils',
  'pmidcite.eutils.cmds',
  'pmidcite.eutils.pubmed',
  'pmidcite.eutils.pubmed.counts',
  'pmidcite.icite',
  'pmidcite.icite.dnldr',
  'pmidcite.scripts',
  'pmidcite.plot',
]
