[build-system]
requires = ["setuptools >= 46.3.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pmidcite"
description="Turbocharge a PubMed literature search using citation data from the NIH"
version = "0.1.2"
license = "AGPL-3.0-or-later"
authors = [
  {name = 'DV Klopfenstein, PhD', email = 'dvklopfenstein@protonmail.com'},
]
maintainers = [
  {name = 'DV Klopfenstein, PhD', email = 'dvklopfenstein@protonmail.com'},
]
readme = {file="README.md", content-type="text/markdown"}

keywords = [
  "library",
  "pubmed",             #   320
  "ncbi",               #   225
  "command-line-tool",  # 7,622
  "literature-mining",  #    48
  "citations",          #   276
  "Citation-network",   #    59
  "google-search",      #   379
  "google-scholar",     #   153
]

dependencies = [
  "requests",
]

# https://pypi.org/classifiers
classifiers=[
  'Development Status :: 5 - Production/Stable',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'Intended Audience :: Information Technology',
  'Environment :: Console',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  'Operating System :: POSIX :: Linux',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
]

# Needed for assignment expressions & the walrus operator
requires-python = '>=3.9'

[project.urls]
"Homepage" = "https://github.com/dvklopfenstein/pmidcite"
"Changelog" = "https://github.com/dvklopfenstein/pmidcite/blob/main/CHANGELOG.md"
#"Documentation" = "https://dvklopfenstein.readthedocs.io"
"Code" = "https://github.com/dvklopfenstein/pmidcite"
"Issue tracker" = "https://github.com/dvklopfenstein/pmidcite/issues"

[project.scripts]
icite   = "pmidcite.scripts.icite:main"
sumpaps = "pmidcite.scripts.summarize_papers:main"

[tool.setuptools]
packages = [
  'pmidcite',
  'pmidcite.cli',
  'pmidcite.eutils',
  'pmidcite.eutils.cmds',
  'pmidcite.eutils.pubmed',
  'pmidcite.eutils.pubmed.counts',
  'pmidcite.icite',
  'pmidcite.icite.dnldr',
  'pmidcite.scripts',
  'pmidcite.plot',
]
